// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be scoped to main file 1`] = `
"import { Buffer } from \\"buffer\\";
export type BufferAlias = Buffer;
"
`;

exports[`should generate unique names 1`] = `
"export type AuthMechanismType = string;
declare export var AuthMechanism: {
  +MONGODB_AWS: \\"MONGODB-AWS\\",
  +MONGODB_CR: \\"MONGODB-CR\\",
  ...
};
export type AuthMechanismType1 = $ElementType<
  typeof AuthMechanism,
  $Keys<typeof AuthMechanism>
>;
"
`;

exports[`should handle variable & type having same name 1`] = `
"declare export var AuthMechanism: {
  +MONGODB_AWS: \\"MONGODB-AWS\\",
  +MONGODB_CR: \\"MONGODB-CR\\",
  ...
};
export type AuthMechanismType = $ElementType<
  typeof AuthMechanism,
  $Keys<typeof AuthMechanism>
>;
"
`;
